--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ li a:hover {
   <li><a href="services.html">SERVICES</a></li>
   <li><a href="video.html">VIDEO</a></li>
   <li><a href="sign%20up.html">SIGN UP</a></li>
-  <li><a href="my%20portfoli.html">MY PORTFOLIO</a></li>
+  <li><a href="my%20portfpolio.html">MY PORTFOLIO</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 
