--- a/sign up.html
+++ b/sign up.html
@@ -55,8 +55,8 @@ li a:hover {
   <li><a href="gallery.html">GALLERY</a></li>
   <li><a href="services.html">SERVICES</a></li>
   <li><a href="video.html">VIDEO</a></li>
-  <li><a href="sign up.html">SIGN UP</a></li>
-  <li><a href="my portfpolio.html">MY PORTFOLIO</a></li>
+  <li><a href="sign%20up.html">SIGN UP</a></li>
+  <li><a href="my%20portfpolio.html">MY PORTFOLIO</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 
