--- a/video.html
+++ b/video.html
@@ -53,8 +53,8 @@ li a:hover {
   <li><a href="gallery.html">GALLERY</a></li>
   <li><a href="services.html">SERVICES</a></li>
   <li><a href="https://www.youtube.com/watch?v=BywDOO99Ia0&t=68s">VIDEO</a></li>
-  <li><a href="sign up.html">SIGN UP</a></li>
-  <li><a href="my portfpolio.html">MY PORTFOLIO</a></li>
+  <li><a href="sign%20up.html">SIGN UP</a></li>
+  <li><a href="my%20portfpolio.html">MY PORTFOLIO</a></li>
   <li><a href="contact.html">Contact</a></li>
 </ul>
 
